--- a/main.html
+++ b/main.html
@@ -8,6 +8,7 @@
 
 <body>
 	<table>
+		<thead>
 		<tr>
 			<th>Part</th>
 			<th>XS</th>
@@ -16,6 +17,8 @@
 			<th>L</th>
 			<th>XL</th>
 		</tr>
+		</thead>
+		<tbody>
 		<tr>
 			<td>Waist</td>
 	        <td>25</td>
@@ -40,6 +43,7 @@
 		    <td>25</td>
 		    <td>25</td>
 		</tr>
+			</tbody>
 	</table>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
